# Gist

./: CMakeLists.txt
src/: Gist.h
src/mfcc/: MFCC.cpp
